--- a/latex_report/bibliografia.tex
+++ b/latex_report/bibliografia.tex
@@ -1,5 +1,5 @@
 \begin{thebibliography}{99}
-\addcontentsline{toc}{chapter}{Bibliografia}
+\addcontentsline{toc}{chapter}{References}
 
 
 \bibitem{ro1} Fischetti M., \textit{Lezioni di Ricerca Operativa}, Aprile 2018.
