--- a/latex_report/capitolo1/sezione1.tex
+++ b/latex_report/capitolo1/sezione1.tex
@@ -4,5 +4,5 @@ without any mathematical languages, it proves that people were starting to reali
 The first TSP mathematical formula was made by Hmail and Kirkman in the XIX century, but it was in the 1930s that the TSP was implemented -
 mainly in Vienna and at Harvard University. An important leap forward
 was made in the 1950s, when G. Dantzig, D. R. Fulkerson, and S. M.
-Johnson expressed the problem as an integer linear program, even if they  did not propose an algorithmic solution. They were able to devise the cutting plane method, and solved an instance with 49 nodes - by constructing a tour and proving that no other tour could be shorter.
+Johnson expressed the problem as an integer linear program, even if they  did not propose an algorithmic solution. They were able to devise the cutting plane method and they solved an instance with 49 nodes - by constructing a tour and proving that no other tour could be shorter.
 In the 1980s, Grötschel, Padberg, Rinaldi and others figured out instances with up to 2392 nodes, using both cutting planes and branch and bound. In 1991, Gerhard Reinelt published the TSPLIB, a collection of benchmark instances of varying difficulty - which has been used for comparing results among many research groups. In the 1990s Applegate, Bixby, Chvátal, and Cook developed the Concorde TSP solver. Nowadays, this program can run even on mobile devices such as iPads and it has been used in many recent record solutions: in 2006, Cook and others computed the optimal tour for an instance of 85900 nodes given by a microchip layout problem and this is currently the largest solved TSPLIB instance. For many other instances with millions of cities, today’s solutions are guaranteed to be within 2-3\% of an optimal tour.
