--- a/latex_report/capitolo2/basic_model.tex
+++ b/latex_report/capitolo2/basic_model.tex
@@ -27,7 +27,7 @@ This configuration gives an undirected complete graph $G=(V,E)$. The formulation
 
 
 It is the same model used in section \ref{chapter:mat_formulation} but in this case \ref{eqn:ragg} is not included.\\
-In this implementation, the graph is symmetric. The arcs $(i, j)$ and $(j, i)$ have the same weight and then thus are represented with the same edge. In this way, the total number of variables are reduced too, considering the starting point not of $n^2$, but only $\frac{n(n-1)}{2}$.\\
+In this implementation, the graph is symmetric. The arcs $(i, j)$ and $(j, i)$ have the same weight and thus they are represented with the same edge. In this way, the total number of variables are reduced too, considering the starting point not of $n^2$ but only $\frac{n(n-1)}{2}$.\\
 The result using this model can be seen in figure \ref{fig:basic_model}.
 
 \begin{figure}[h]
