--- a/latex_report/intro_cap1.tex
+++ b/latex_report/intro_cap1.tex
@@ -7,7 +7,7 @@ It is used mainly in plain logistics, planning, and as a benchmark for
 testing optimization problems. However, it can be helpful in many other
 areas with a slight modification of the formula - such as in DNA sequencing,
 considering cities as DNA fragments, and astronomy, where they are stars.\\
-Even though it is an NP-hard problem, instances with the dimensions of thousand or even millions of cities can be solved  with great precision (around 1\%) thanks to many heuristics and exact algorithms.
+Even though it is a NP-hard problem, instances with the dimensions of thousand or even millions of cities can be solved  with great precision (around 1\%) thanks to many heuristics and exact algorithms.
 
 \section{Brief history of the problem}
 \input{capitolo1/sezione1.tex}
