--- a/latex_report/intro_cap3.tex
+++ b/latex_report/intro_cap3.tex
@@ -1,4 +1,4 @@
-In chapter \ref{chapter:compact-models} I described models that cut out any possibility to have some sub-tours in the optimal solution. In this section I use particular techniques to remove the tours in a faster way in relation to the one in the previous chapter.
+In chapter \ref{chapter:compact-models} I described models that cut out any possibility to have some sub-tours in the optimal solution. In this section I use particular techniques to remove the tours in a faster way.
 
 \section{Benders method}
 \label{chapter:benders}
