--- a/latex_report/intro_cap4.tex
+++ b/latex_report/intro_cap4.tex
@@ -1,4 +1,4 @@
-In this section I am going to explore a new branch of the TSP resolution. Now the discovery of an optimal solution is no longer important. This can be achieved through the use of the matheuristic and heuristic to find a solution, with a great approximation to the optimal one, even with instances including millions of nodes. In this chapter I am going to cover different approach such as: matheuristic methods, heuristic and metaheuristic algoritms.
+In this section I am going to explore a new branch of the TSP resolution, in which the discovery of an optimal solution is no longer important. This development uses  matheuristic and heuristic to find a solution with a great approximation to the optimal one, even with instances including millions of nodes. Therefore, I am going to explore how big instances can be solved when classical methods such as MTZ and GG take too long. Moreover, I am going to cover different approach, namely matheuristic methods, heuristic and metaheuristic algoritms.
 
 
 \section{Matheuristics}
