--- a/latex_report/results/compact_models.tex
+++ b/latex_report/results/compact_models.tex
@@ -1,4 +1,4 @@
-In this section the compact models presented in chapter \ref{chapter:compact-models} focusing in particular of MTZ and its variants and GG models. To test them a set of 20 instance of 50 nodes were generated and runned with a global timelimit of 30 minutes. The results are visible in figure \ref{fig:result-compact}.
+In this section the compact models presented in chapter \ref{chapter:compact-models} are evaluated focusing in particular on MTZ and its variants and and GG models. To test them, a set of 20 instance of 50 nodes was generated and  was runned with a global timelimit of 30 minutes. The results are visible in figure \ref{fig:result-compact}.
 
 \begin{figure}[h]
 	\centering
@@ -7,4 +7,4 @@ In this section the compact models presented in chapter \ref{chapter:compact-mod
 	\label{fig:result-compact}
 \end{figure}
 
-From this image we can state that the MTZ basic model is far from being the best one of this section. In fact the best models are GG and MTZ\_LAZY wich on many instaces perform in a comparable way. But it is possible to see that while MTZ\_LAZY in some cases as reached the timelimit, the GG model deliver a consistent solution of the instance.
+From this image, it can be stated that the MTZ basic model is far from being the best one, and the best models are GG and MTZ\_LAZY - which perform in a comparable way. However, it is possible to see the that GG model deliver a consistent solution of the instance, while MTZ\_LAZY has reached the timelimit in some cases.
