--- a/latex_report/ro2.tex
+++ b/latex_report/ro2.tex
@@ -20,7 +20,7 @@
 }\\
 \vfill
 \textit{\large Professor:} \hfill \textit{\large Student:}\\
-\textsc{\large Prof. Matteo Fischetti} \hfill \textsc{Thomas Porro}\\
+\textsc{\large Matteo Fischetti} \hfill \textsc{Thomas Porro}\\
 \hfill \textsc{1237030}\\
 
 \vfill
@@ -69,7 +69,7 @@
 \label{chapter:codice} 
 \input{intro_cap4.tex}
 
-\chapter{Experimental results}
+\chapter{Experimental results and conclusions}
 \label{chapter:results}
 \input{intro_cap5.tex}
 
